--- a/package.json
+++ b/package.json
@@ -1,31 +1,13 @@
 {
-  "name": "untitled", //yarn init --yes
+  "name": "Projet",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "xo": {
-    "envs": [
-      "node" //je travaille sur du node
-    ],
-    "space": 2, //identation avec 2 espaces
-    "rules": {
-      "max-len": [ //chaque ligne fait 80 colonnes
-        "error",
-        80, // limiter le nombre de lignes a 80
-        2
-      ]
-    }
+  "dependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "on": "^1.3.0",
+    "prompt": "^1.0.0",
+    "vorpal": "^1.12.0"
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
